
2009-04-07 11:16 Ali aliov@xfce.org 
	 * : Updates on the brightness plugin to act like a menu so it will close the popup when it doesn't have input focus

2009-04-06 19:47 Ali aliov@xfce.org 
	 * : Fix some typos

2009-04-06 16:06 Ali aliov@xfce.org 
	 * : Correct tooltip in the brightness plugin

2009-04-06 14:37 Ali aliov@xfce.org 
	 * : Change brightness on scroll mouse events

2009-04-06 10:54 Ali aliov@xfce.org 
	 * : Fix a warning the inhibit panel plugin when full debug is enabled+make settings dialog correctly resizable

2009-04-06 10:50 Ali aliov@xfce.org 
	 * : Added inhibit screen saver option in the inhibit plugin

2009-04-06  8:45 Ali aliov@xfce.org 
	 * : Fix untranslated panel plugins comment

2009-04-05 21:06 Ali aliov@xfce.org 
	 * : The battery critical level was not shown correctly in the settings dialog

2009-04-05 20:31 Ali aliov@xfce.org 
	 * : Include missing config.h in xfpm-battery-info

2009-04-05 19:40 Ali aliov@xfce.org 
	 * : Fix bug: 5193, the help document in the settings dialog

2009-04-04 13:58 Ali aliov@xfce.org 
	 * : Alpha2 release

2009-04-04 11:30 Ali aliov@xfce.org 
	 * : Fix issue with multiple suspend callback

2009-04-03 13:37 Ali aliov@xfce.org 
	 * : Fix issue with battery critical level in the settings dialog

2009-04-02 19:05 Ali aliov@xfce.org 
	 * : Patch for the man pages by Robby Workman

2009-04-02 15:36 Ali aliov@xfce.org 
	 * : Added exit option in the context menu+some optimization to function calls in libxfpm common

2009-04-02 14:14 Ali aliov@xfce.org 
	 * : Added on battery DBus signal+Fix brightness settings on battery power

2009-04-02 10:46 Ali aliov@xfce.org 
	 * : Fix a Glade warnings

2009-04-02 10:24 Ali aliov@xfce.org 
	 * : Fix Some bugs reported by Yves Alexis

2009-04-02  8:40 Ali aliov@xfce.org 
	 * : Patch of the man page from Robby Workman

2009-04-01 23:33 Ali aliov@xfce.org 