@@ -1,4 +1,7 @@
 
+2009-04-07 13:23 Ali aliov@xfce.org 
+	 * : Implement a clean way to restart HAL related objects when HALD restarts
+
 2009-04-07 11:16 Ali aliov@xfce.org 
 	 * : Updates on the brightness plugin to act like a menu so it will close the popup when it doesn't have input focus
 
